--- a/src/w4/w4-assignment.html
+++ b/src/w4/w4-assignment.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasta Carbonara</title>
+    <link
+      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <style>
-      * {
+      *,
+      *::before,
+      *::after {
         box-sizing: border-box;
         font-family: "Spoqa Han Sans Neo", "sans-serif";
         margin: 0;
@@ -37,7 +44,10 @@
       <p><stong>CLAIRE SAFFITZ</stong></p>
       <p>2023.01.04</p>
       <p><em>레서피</em></p>
-      <img src="../../assets/pasta-carbonara.jpg" alt="" />
+      <img
+        src="../../assets/pasta-carbonara.jpg"
+        alt="흰 접시 위에 담긴 카르보나라 파스타 관찰레가 같이 버무려져있다"
+      />
       <p>사진: Chelsie Craig, 스타일링: Molly Baz</p>
       <p><strong>총 소요 시간 24분</strong></p>
       <p>
@@ -136,7 +146,7 @@
         <em>관찰레 4oz.</em>
         를 약 1x¼" 정도 크기로 잘라주세요.
         <em>치즈 2oz.</em>
-        를 곱게 갈아서 1/4 분량은 나중을 위해 따로 떼어두세요.
+        를 곱게 갈아서 ¼ 분량은 나중을 위해 따로 떼어두세요.
       </p>
       <h3>단계 3</h3>
       <p>
@@ -178,10 +188,10 @@
       </p>
       <h3>단계 9</h3>
       <p>
-        면수 1/4컵을 계란믹스에 부어 휘젓고, 아주 천천히 팬에 흘려 넣으면서 계속
+        면수 ¼컵을 계란믹스에 부어 휘젓고, 아주 천천히 팬에 흘려 넣으면서 계속
         저어주세요. 치즈가 녹고 계란이 윤기가는 소스를 형성할 때까지 계속
         저어주세요. 필요하면 소금을 넣어 간을 조절하세요. 소스를 흐르는 크림과
-        비슷한 농도로 만들기 위해 남은 면수 ½컵을 저어 넣어주세요 (아마도 모두
+        비슷한 농도로 만들기 위해 남은 면수 ½컵을 젓어 넣어주세요 (아마도 모두
         사용하지는 않을 것입니다).
       </p>
       <h3>단계 10</h3>
@@ -189,7 +199,7 @@
         관찰레를 섞어서 파스타를 그릇에 나누어주세요. 후추와 따로 떼어둔
         치즈가루로 꾸며주세요.
       </p>
-      <p class="callout">
+      <p>
         편집자의 참고 사항: 이 레시피는 원래 2018년 1월호에 게재되었습니다. 더
         많은 최고의 파스타 레시피를 확인하려면 여기를 참조하세요.
       </p>
