--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <li><a href="./src/w2/index.html">2주차</a></li>
       <li><a href="./src/w3/index.html">3주차</a></li>
       <li><a href="./src/w4/w4-assignment.html">4주차</a></li>
-      <li><a href="./src/w5/index.html">5주차</a></li>
-      <li><a href="./src/w6/index.html">6주차</a></li>
+      <li><a href="./src/w7/assignment/index.html">7주차 과제</a></li>
     </ol>
   </body>
 </html>
